methods.picture.PictureMono2.scala.error
Erreur de compilation :
PictureMono2:22: error: not found: value avancer
      avancer()
      ^