methods.picture.PictureMono2.scala.code
override def run() {
  
  def carreGris(){
    baisseBrosse() ; leveBrosse()
  }
  
  def faireV(){
    avance() ; avance()
    carreGris()
    avance() ; gauche() ; avance()
    carreGris()
    recule() ; droite() ; avance()
    carreGris()
    avance() ; avance() ; gauche()
  }
  
  def onethird(){
    for (k <- 1 to 4){
      faireV()
    }
    for (k <- 1 to 7){
      avancer()
    }  
  }
  for (k <- 1 to 3){
    onethird()
  }
  
  
}